design improvements news articles overview

--- a/mobilestyle.css
+++ b/mobilestyle.css
@@ -342,4 +342,12 @@ Copyright (c) 2019 Lars Becker (lars@lars-b.net)
         width: 100% !important;
         max-width: 100% !important;
     }
+    
+    .newsArticlePreview p:nth-child(2) {
+        height: auto !important;    
+    }
+
+    .newsArticlePreview p:nth-child(3) {        
+        height: auto !important;        
+    }
 }
