--- a/style.css
+++ b/style.css
@@ -546,11 +546,11 @@ img.map {
     display: none;
 }
 
-.newsContainer {
+.newsContainer {    
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-content: stretch;
     align-content: space-between;
 }
