--- a/style.css
+++ b/style.css
@@ -581,16 +581,26 @@ img.map {
 
 .newsArticlePreview p:nth-child(3) {
     margin: 0;
-    height: 200px;
+    height: 150px;
     background-color: #eee;    
+}
+
+.newsArticlePreview p:nth-child(4) {
+    margin-bottom: 2.5em;
+}
+
+.newsArticlePreview p:nth-child(5) {
+    position: absolute;
+    bottom: 0;
 }
 
 .newsArticlePreview p img {        
     width: 100% !important; 
-    height: auto !important;
+    height: 100% !important;    
+    object-fit: cover !important;
     border-radius: 0 !important;
     box-shadow: none !important;    
-    margin: 0 !important;    
+    margin: auto !important;
 }
 
 @media all and (max-width: 800px) {
